ci: update action pins and relocate automation docs

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -198,4 +198,5 @@
 # HyDE
 'area/hyde':
 - changed-files:
-  - any-glob-to-any-file: 'src/services/hyde/**/*'
+  - any-glob-to-any-file:
+    - 'src/services/hyde/**/*'
