--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -36,7 +36,7 @@ runs:
         cache-dependency-glob: "**/uv.lock"
 
     - name: Cache Python dependencies
-      uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
+      uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
       id: cache
       with:
         path: |
@@ -49,6 +49,7 @@ runs:
     - name: Install dependencies
       shell: bash
       run: |
+        set -euo pipefail
         if [ "${{ inputs.install-dev }}" == "true" ]; then
           uv sync --dev --frozen
         else
@@ -58,5 +59,11 @@ runs:
     - name: Verify installation
       shell: bash
       run: |
+        set -euo pipefail
+        if ! command -v uv >/dev/null 2>&1; then
+          echo "uv is not available after setup" >&2
+          exit 1
+        fi
+
         uv run python --version
         uv run python -c "import sys; print(f'Python {sys.version}')"
