--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,30 @@
-name: Core CI
+name: CI
 
 on:
   push:
-    branches: [main, develop]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [main, develop]
+    branches:
+      - main
+      - develop
   workflow_dispatch:
 
 permissions:
   contents: read
 
-env:
-  PYTHONUNBUFFERED: 1
-  PIP_DISABLE_PIP_VERSION_CHECK: 1
-  UV_SYSTEM_PYTHON: 1
-  UV_CACHE_COMPRESSION: 1
-
 concurrency:
-  group: core-ci-${{ github.ref }}
+  group: ci-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  PYTHONUNBUFFERED: "1"
+  UV_SYSTEM_PYTHON: "1"
+
 jobs:
-  detect-changes:
-    name: Detect Changes
+  changes:
+    name: Detect changes
     runs-on: ubuntu-latest
     outputs:
       python: ${{ steps.filter.outputs.python }}
@@ -33,7 +35,7 @@ jobs:
       workflows: ${{ steps.filter.outputs.workflows }}
     steps:
       - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           fetch-depth: 0
 
@@ -46,9 +48,7 @@ jobs:
               - 'src/**/*.py'
               - 'scripts/**/*.py'
             tests:
-              - 'tests/**/*.py'
-              - 'tests/**/*.json'
-              - 'tests/**/*.yml'
+              - 'tests/**'
             config:
               - 'pyproject.toml'
               - 'uv.lock'
@@ -65,25 +65,26 @@ jobs:
               - '.github/actions/**'
 
   lint:
-    name: Lint & Type Check
+    name: Lint & static analysis
     runs-on: ubuntu-latest
-    needs: detect-changes
+    needs: changes
     if: >-
       github.event_name == 'pull_request' ||
       github.event_name == 'workflow_dispatch' ||
-      needs.detect-changes.outputs.python == 'true' ||
-      needs.detect-changes.outputs.tests == 'true' ||
-      needs.detect-changes.outputs.config == 'true' ||
-      needs.detect-changes.outputs.dependencies == 'true'
+      needs.changes.outputs.python == 'true' ||
+      needs.changes.outputs.tests == 'true' ||
+      needs.changes.outputs.config == 'true' ||
+      needs.changes.outputs.dependencies == 'true' ||
+      needs.changes.outputs.workflows == 'true'
     steps:
       - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Setup environment
+      - name: Setup Python environment
         uses: ./.github/actions/setup-environment
         with:
-          python-version: '3.12'
-          cache-suffix: '-lint'
+          python-version: "3.12"
+          cache-suffix: "-lint"
 
       - name: Ruff format (check)
         run: uv run ruff format --check .
@@ -92,49 +93,51 @@ jobs:
         run: uv run ruff check .
 
       - name: Pylint
-        run: uv run pylint --fail-under=10 src scripts
+        run: uv run pylint --fail-under=9.5 src scripts
 
       - name: Pyright
         run: uv run pyright
 
   tests:
-    name: Test Suite
+    name: Test suite
     runs-on: ubuntu-latest
-    needs: [detect-changes, lint]
+    needs:
+      - changes
+      - lint
     if: >-
       always() &&
       (needs.lint.result == 'success' || needs.lint.result == 'skipped') &&
       (
         github.event_name == 'pull_request' ||
         github.event_name == 'workflow_dispatch' ||
-        needs.detect-changes.outputs.python == 'true' ||
-        needs.detect-changes.outputs.tests == 'true' ||
-        needs.detect-changes.outputs.config == 'true' ||
-        needs.detect-changes.outputs.dependencies == 'true'
+        needs.changes.outputs.python == 'true' ||
+        needs.changes.outputs.tests == 'true' ||
+        needs.changes.outputs.config == 'true' ||
+        needs.changes.outputs.dependencies == 'true'
       )
     steps:
       - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Setup environment
+      - name: Setup Python environment
         uses: ./.github/actions/setup-environment
         with:
-          python-version: '3.12'
-          cache-suffix: '-tests'
+          python-version: "3.12"
+          cache-suffix: "-tests"
 
-      - name: Prepare test directories
+      - name: Prepare runtime directories
         run: |
           mkdir -p tests/fixtures/{cache,data,logs}
           mkdir -p logs cache data
 
-      - name: Run tests
+      - name: Run test suite
         run: uv run python scripts/dev.py test --profile ci
 
       - name: Upload coverage artifact
         if: always()
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: coverage-artifact
+          name: coverage-xml
           path: coverage.xml
           if-no-files-found: ignore
           retention-days: 7
@@ -147,77 +150,77 @@ jobs:
           fail_ci_if_error: false
 
   build:
-    name: Build Package
+    name: Build package
     runs-on: ubuntu-latest
-    needs: [detect-changes, lint]
+    needs:
+      - changes
+      - lint
+      - tests
     if: >-
-      needs.lint.result == 'success' &&
+      always() &&
+      (needs.tests.result == 'success' || needs.tests.result == 'skipped') &&
       (
         github.event_name == 'pull_request' ||
         github.event_name == 'workflow_dispatch' ||
-        needs.detect-changes.outputs.python == 'true' ||
-        needs.detect-changes.outputs.config == 'true' ||
-        needs.detect-changes.outputs.dependencies == 'true'
+        needs.changes.outputs.python == 'true' ||
+        needs.changes.outputs.config == 'true' ||
+        needs.changes.outputs.dependencies == 'true'
       )
     steps:
       - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Setup environment
+      - name: Setup Python environment
         uses: ./.github/actions/setup-environment
         with:
-          python-version: '3.12'
-          cache-suffix: '-build'
+          python-version: "3.12"
+          cache-suffix: "-build"
 
-      - name: Build distribution
+      - name: Build distributions
         run: uv build
 
-      - name: Check distribution metadata
+      - name: Verify metadata
         run: |
           uv tool install twine
           uv tool run twine check dist/*
 
-      - name: Upload artifacts
+      - name: Upload distribution artifacts
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: distribution-artifacts
+          name: dist
           path: dist/
           retention-days: 7
 
-  security:
-    name: Dependency Audit
+  audit:
+    name: Security audit
     runs-on: ubuntu-latest
-    needs: [detect-changes, lint]
+    needs:
+      - changes
+      - lint
     if: >-
       needs.lint.result == 'success' &&
       (
         github.event_name == 'pull_request' ||
         github.event_name == 'workflow_dispatch' ||
-        needs.detect-changes.outputs.python == 'true' ||
-        needs.detect-changes.outputs.dependencies == 'true'
+        needs.changes.outputs.python == 'true' ||
+        needs.changes.outputs.dependencies == 'true'
       )
-    permissions:
-      contents: read
     steps:
       - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Setup environment
+      - name: Setup Python environment
         uses: ./.github/actions/setup-environment
         with:
-          python-version: '3.12'
-          cache-suffix: '-security'
+          python-version: "3.12"
+          cache-suffix: "-audit"
 
       - name: Install security tooling
         run: |
-          set -e
-          uv tool install pip-audit bandit safety
+          uv tool install pip-audit bandit
 
       - name: Run pip-audit
         run: uv tool run pip-audit --progress-spinner=off --format=json --output=pip-audit.json
-
-      - name: Run safety check
-        run: uv tool run safety check --json --output=safety-report.json
 
       - name: Run Bandit
         run: uv tool run bandit -q -r src -f json -o bandit-report.json
@@ -229,6 +232,5 @@ jobs:
           name: security-reports
           path: |
             pip-audit.json
-            safety-report.json
             bandit-report.json
           retention-days: 7
