--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,9 @@ jobs:
       needs.changes.outputs.dependencies == 'true' ||
       needs.changes.outputs.workflows == 'true'
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
       - name: Prepare workspace
         uses: ./.github/actions/checkout-and-setup
         with:
@@ -113,6 +116,9 @@ jobs:
         needs.changes.outputs.dependencies == 'true'
       )
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
       - name: Prepare workspace
         uses: ./.github/actions/checkout-and-setup
         with:
@@ -161,6 +167,9 @@ jobs:
         needs.changes.outputs.dependencies == 'true'
       )
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
       - name: Prepare workspace
         uses: ./.github/actions/checkout-and-setup
         with:
@@ -197,6 +206,9 @@ jobs:
         needs.changes.outputs.dependencies == 'true'
       )
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
       - name: Prepare workspace
         uses: ./.github/actions/checkout-and-setup
         with:
