--- a/.github/workflows/config-deployment.yml
+++ b/.github/workflows/config-deployment.yml
@@ -59,6 +59,9 @@ jobs:
       REQUESTED_ENVIRONMENT: ${{ github.event.inputs.environment || '' }}
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
       - name: Prepare workspace
         uses: ./.github/actions/checkout-and-setup
         with:
