--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -213,10 +213,16 @@ jobs:
     name: Security report
     runs-on: ubuntu-latest
     needs:
+      - prepare
       - build-artifacts
     permissions:
       contents: read
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          ref: ${{ needs.prepare.outputs.version }}
+
       - name: Prepare workspace
         uses: ./.github/actions/checkout-and-setup
         with:
