--- a/pyproject.toml
+++ b/pyproject.toml
@@ -475,6 +475,12 @@ dev = [
     "pytest-timeout>=2.4.0,<3.0.0",
     "pytest-env>=1.1.5,<2.0.0",
 ]
+docs = [
+    "mkdocs>=1.6.1,<2.0.0",
+    "mkdocs-material>=9.6.20,<10.0.0",
+    "mkdocstrings>=0.30.1,<1.0.0",
+    "mkdocstrings-python>=1.18.2,<2.0.0",
+]
 
 [tool.pylint]
 [tool.pylint.main]
