docs: update changelog and documentation references, remove rag metrics catalog
- Added focused FastAPI security middleware tests and release notes.
- Documented osquery prerequisites for configuration file watching.
- Captured ADR 0009 for the tiered Playwright anti-bot stack.
- Published the consolidated Evaluation Harness Playbook.
- Updated documentation links to reflect the removal of the RAG Metrics Catalog.

--- a/docs/build_config/mkdocs.yml
+++ b/docs/build_config/mkdocs.yml
@@ -75,7 +75,7 @@ nav:
       - Testing Guide: testing/testing-guide.md
       - MCP Unit Tests: testing/mcp-unit-tests.md
       - Query Processing Metrics: observability/query_processing_metrics.md
-      - RAG Metrics Catalog: observability/rag_metrics_catalog.md
+      - Evaluation Harness Playbook: testing/evaluation-harness.md
   - Governance:
       - Community Guidelines: contributing/community-guidelines.md
       - Contributor Guide: developers/contributing.md
