refactor(docs): consolidate and update documentation structure and content - Rename 'System Architecture' to 'Architecture & Orchestration' and update links - Remove outdated documents and replace with new consolidated guides - Add 'Setup and Configuration' guide for environment preparation and profile management

--- a/docs/build_config/mkdocs.yml
+++ b/docs/build_config/mkdocs.yml
@@ -49,7 +49,7 @@ nav:
   - Architecture & API:
       - Developer Hub: developers/index.md
       - Developer Setup: developers/getting-started.md
-      - System Architecture: developers/architecture.md
+      - System Architecture: developers/architecture-and-orchestration.md
       - Configuration Reference: developers/configuration.md
       - Service Adapters: developers/service_adapters.md
       - API Reference: developers/api-reference.md
