refactor: consolidate documentation and remove deprecated files
- Deleted the API Reference document and replaced it with a new "Cache and Performance" guide.
- Removed the "Persistent Cache Overview" and integrated its content into the new cache guide.
- Deleted the "CI/CD Overview" and merged relevant information into the "Platform Operations" document.
- Removed the "Retrieval Stack Compatibility Matrix" and included its content in the "Platform Operations" guide.
- Created a new "Contributing & Testing" document to streamline contribution guidelines and testing strategies.
- Deleted outdated "Contributing Guide," "Production Deployment Guide," and "Unified Testing Guide."
- Updated links in the main index and developer index to reflect the new documentation structure.

--- a/docs/build_config/mkdocs.yml
+++ b/docs/build_config/mkdocs.yml
@@ -52,9 +52,9 @@ nav:
       - System Architecture: developers/architecture-and-orchestration.md
       - Configuration Reference: developers/configuration.md
       - Service Adapters: developers/service_adapters.md
-      - API Reference: developers/api-reference.md
+      - API & Contracts: developers/api-and-contracts.md
       - App Profiles: developers/app-profiles.md
-      - CI/CD Workflows: developers/ci-cd.md
+      - Platform Operations: developers/platform-operations.md
       - Deployment Guide: developers/deployment.md
       - GPU Acceleration: developers/gpu-acceleration.md
       - GitHub Actions: developers/github-actions.md
