chore(docs): update documentation links and ensure uv availability in workflow

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -41,6 +41,9 @@ jobs:
           cache-suffix: "-docs"
           install-dev: 'false'
 
+      - name: Ensure uv is available
+        run: uv --version
+
       - name: Install documentation dependencies
         run: uv sync --frozen --group docs
 
