--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -45,7 +45,7 @@ jobs:
         run: uv --version
 
       - name: Install documentation dependencies
-        run: uv sync --frozen --group docs
+        run: uv sync --frozen --extra docs
 
       - name: Run documentation checks
         run: uv run python scripts/dev.py validate --check-docs --strict
