refactor: FastAPI service dependencies and middleware management
- Introduced a new `dependencies.py` module to centralize FastAPI dependency helpers, removing the previous container-style wrapper.
- Updated middleware management by renaming `create_middleware_manager` to `get_middleware_manager` and refactoring the `MiddlewareManager` class to use a more structured approach with `MiddlewareSpec`.
- Added a new `ServiceRegistry` class for centralized lifecycle management of services, including initialization and shutdown procedures.
- Removed the old `dependencies/__init__.py` file as it was redundant.
- Enhanced test coverage for the new middleware manager and cache manager behaviors.
- Updated `uv.lock` to include the new `asgi-lifespan` dependency for managing application lifespan in tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,7 @@ eval = [
 dev = [
     "pytest>=8.4.2,<9.0.0",
     "pytest-asyncio>=1.2.0,<2.0.0",
+    "asgi-lifespan>=2.1.0,<3.0.0",
     "pytest-cov>=7.0.0,<8.0.0",
     "pytest-mock>=3.15.1,<4.0.0",
     "pytest-timeout>=2.4.0,<3.0.0",
@@ -352,7 +353,6 @@ addopts = [
     "--strict-markers",              # Treat unknown markers as errors
     "--strict-config",               # Error on unknown config keys
     "--tb=short",                    # Shorter traceback format
-    "--verbose",                     # Verbose output for debugging
     "--durations=10",                # Show 10 slowest tests
     "--maxfail=5",                   # Stop after 5 failures
     "--import-mode=prepend",         # Prepend mode for src imports
@@ -360,7 +360,8 @@ addopts = [
     "--doctest-modules",             # Run doctests in modules
     "--doctest-continue-on-failure", # Continue after doctest failures
     "--disable-warnings",            # Clean output
-    "-ra",                           # Show summary for all except passed
+    "--randomly-seed=42",            # Deterministic pytest-randomly seed
+    "-q",                            # Quiet baseline output
 ]
 
 # Warning filters for clean test output
