feat(dependencies): add flagsmith package for server functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -205,6 +205,7 @@ gpu = [
 
 server = [
     "brotli-asgi>=1.4.0,<2.0.0",
+    "flagsmith>=4.0.1",
     "purgatory[redis]>=3.0.1,<4.0.0",
     "uvloop>=0.21.0,<1.0.0; platform_system != 'Windows'",
 ]
