feat(config): add configuration guard and enhance CLI settings loading - Introduced a new job in CI to run a configuration guard script. - Updated documentation to reflect new CLI commands for loading and validating configuration files.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,9 @@ jobs:
       - name: Pyright
         run: uv run pyright
 
+      - name: Configuration guard
+        run: python scripts/guards/check_settings_usage.py
+
   tests:
     name: Test suite (${{ matrix.profile }})
     runs-on: ubuntu-latest
