--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -22,13 +22,9 @@ spec:
       - name: ai-docs-worker
         image: ai-docs-worker:latest  # Replace with your registry URL
         imagePullPolicy: IfNotPresent
-        env:
-        - name: AI_DOCS_LOG_LEVEL
-          value: "INFO"
-        - name: PYTHONPATH
-          value: "/app/src"
-        - name: AI_DOCS_VECTOR_DB__QDRANT_URL
-          value: "http://qdrant:6333"
+        envFrom:
+        - configMapRef:
+            name: ai-docs-config
         resources:
           requests:
             memory: "1Gi"
